[tool.poetry]
name = "nogiblogimg"
version = "0.1.0"
description = "nogiyou"
authors = ["YAMASHITA Yuta <proyuuta0618188188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
