[tool.poetry]
name = "nogiblogimg"
version = "0.1.0"
description = "nogiyou"
authors = ["YAMASHITA Yuta <proyuuta0618188188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
tqdm = "^4.56.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
poethepoet = "^0.9.0"
autopep8 = "^1.5.4"
autoflake = "^1.4"
isort = "^5.7.0"


[tool.poetry.scripts]
nogiblogimg = "nogiblogimg.main:main"  

[tool.poe.tasks]
lint        = "flake8 nogiblogimg"
format     = { shell = "autoflake -ir --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports nogiblogimg/ && isort nogiblogimg/ && autopep8 -ir nogiblogimg/" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

